--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                 <h1 class="sub-title">My Projects</h1>
                 <div class="work-list">
                     <div class="work" id="Research Project">
-                        <img src="/images/Projects/Research.jpeg">
+                        <img src="images/Projects/Research.jpeg">
                         <div class="layer">
                             <h3>
                                 PulseMind: An AI-Powered Web System for Children with ADHD
@@ -357,7 +357,7 @@
                         </div>
                     </div>
                     <div class="work" id="smart utills App">
-                        <img src="/images/Projects/pexels-divinetechygirl-1181216.jpg">
+                        <img src="images/Projects/pexels-divinetechygirl-1181216.jpg">
                         <div class="layer">
                             <h3>Smart Utils Application – Automated Testing with Playwright</h3>
                             <p>Developed and executed automated end-to-end test scripts for the Smart Utils application using Playwright, ensuring reliable functionality across multiple browsers and devices. Designed and implemented robust test scenarios to validate core features, enhance regression testing efficiency, and minimize manual testing effort. Incorporated assertions for UI validation, data integrity checks, and performance monitoring, resulting in improved test coverage and faster release cycles.
@@ -366,7 +366,7 @@
                         </div>
                     </div>
                     <div class="work" id="Food Price Tracker Mobile App">
-                        <img src="/images/Projects/food price2.jpeg">
+                        <img src="images/Projects/food price2.jpeg">
                         <div class="layer">
                             <h3>Food Price Tracker Mobile App</h3>
                             <p>In the 2nd year, 2nd semester of the Mobile Application Development module, a team of four developed the Food Price Tracker Mobile Application using Kotlin and Firebase. Built with Android Studio, the app provides real-time price information for food items, tracks price changes, and supports secure login for store owners and customers.
