--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
                         <a href="https://www.linkedin.com/in/rusith-sashika/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                         <a href="https://github.com/Rusith-S" target="_blank"><i class="fa-brands fa-github"></i></a>
                     </div>
-                    <a href="images/Rusith Sashika Resume.pdf" download class="btn btn2">Download My CV</a>
+                    <a href="images/Rusith Sashika Resume.pdf" download class="btn btn2">Download My Resume</a>
                 </div>
 
                 <div class="contact-right">
